<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_account">Add</string>
    <string name="add_comment">Add comment</string>
    <string name="app_name">Materialistic</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info_text">&lt;p>Version: %1$s (%2$d)&lt;/p> &lt;p>This application is open source at &lt;a href=https://github.com/hidroh/materialistic>github.com/hidroh/materialistic&lt;/a>&lt;/p></string>
    <string name="application_info_title">Application Info</string>
    <string name="article">Article</string>
    <string name="article_link">Article link</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_account">Choose an account</string>
    <string name="chooser_title">Open with</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_drafts">Clear all drafts</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="feedback">Feedback</string>
    <string name="help_navigate">Display a floating navigation button that responds to swipe gestures to navigate nested comment threads.</string>
    <string name="help_navigate_down">Swipe ↓: go to next comment</string>
    <string name="help_navigate_left">Swipe ←: go back to parent</string>
    <string name="help_navigate_move">Long press to drag navigation button to new position</string>
    <string name="help_navigate_right">Swipe →: expand &amp; go to 1st reply</string>
    <string name="help_navigate_up">Swipe ↑: go to previous comment</string>
    <string name="help_new_comments">Story with new comments since last refresh</string>
    <string name="help_new_story">New story since last refresh</string>
    <string name="help_promoted_story">Promoted story since last refresh</string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="license_title">License</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="more_sections">More sections</string>
    <string name="pref_ad_block">pref_ad_block</string>
    <string name="pref_ad_block_summary">Enable simple ad blocker for internal browser</string>
    <string name="pref_ad_block_title">Block ads</string>
    <string name="pref_auto_viewed">pref_auto_viewed</string>
    <string name="pref_auto_viewed_summary">Mark stories as viewed as you swipe up</string>
    <string name="pref_auto_viewed_title">Auto mark as viewed</string>
    <string name="pref_color_code">pref_color_code</string>
    <string name="pref_color_code_opacity">pref_color_code_opacity</string>
    <string name="pref_color_code_opacity_title">Color code opacity</string>
    <string name="pref_color_code_title">Color code</string>
    <string name="pref_comment_display">pref_comment_display</string>
    <string name="pref_comment_display_title">Thread</string>
    <string name="pref_comment_display_value_single">single</string>
    <string name="pref_custom_tab">pref_custom_tab</string>
    <string name="pref_custom_tab_summary">Open a browser tab instead of full browser</string>
    <string name="pref_custom_tab_title">Use custom tabs</string>
    <string name="pref_daynight_auto">pref_daynight_auto</string>
    <string name="pref_daynight_title">Auto day-night mode</string>
    <string name="pref_external">pref_external</string>
    <string name="pref_external_summary">Read articles in external browser</string>
    <string name="pref_external_title">Use external browser</string>
    <string name="pref_font">pref_font</string>
    <string name="pref_font_title">Font</string>
    <string name="pref_highlight_updated">pref_highlight_updated</string>
    <string name="pref_highlight_updated_help">pref_highlight_updated_help</string>
    <string name="pref_highlight_updated_summary">Show changes from last refresh</string>
    <string name="pref_highlight_updated_title">Highlight updated stories</string>
    <string name="pref_launch_screen">pref_launch_screen</string>
    <string name="pref_launch_screen_title">Default screen</string>
    <string name="pref_lazy_load">pref_lazy_load</string>
    <string name="pref_lazy_load_help">pref_lazy_load_help</string>
    <string name="pref_lazy_load_summary">Load content only when you switch to its tab</string>
    <string name="pref_lazy_load_title">Lazy load content</string>
    <string name="pref_line_height">pref_line_height</string>
    <string name="pref_line_height_title">Line spacing</string>
    <string name="pref_list_item_view">pref_list_item_view</string>
    <string name="pref_list_item_view_title">Show as cards</string>
    <string name="pref_list_swipe_left">pref_list_swipe_left</string>
    <string name="pref_list_swipe_left_title">Swipe left to</string>
    <string name="pref_list_swipe_right">pref_list_swipe_right</string>
    <string name="pref_list_swipe_right_title">Swipe right to</string>
    <string name="pref_max_lines">pref_max_lines</string>
    <string name="pref_max_lines_title">Long comment</string>
    <string name="pref_multi_window">pref_multi_window</string>
    <string name="pref_multi_window_summary">Which window to open story (Android 7+)</string>
    <string name="pref_multi_window_title">Multi-window mode</string>
    <string name="pref_multi_window_value_none">none</string>
    <string name="pref_navigation">pref_navigation</string>
    <string name="pref_navigation_help">pref_navigation_help</string>
    <string name="pref_navigation_title">On-screen navigation</string>
    <string name="pref_navigation_vibrate">pref_navigation_vibrate</string>
    <string name="pref_navigation_vibrate_title">Vibrate on touch</string>
    <string name="pref_offline_article">pref_offline_article</string>
    <string name="pref_offline_article_title">Download article</string>
    <string name="pref_offline_comments">pref_offline_comments</string>
    <string name="pref_offline_comments_title">Download comments</string>
    <string name="pref_offline_data">pref_offline_data</string>
    <string name="pref_offline_data_title">When to download</string>
    <string name="pref_offline_notification">pref_offline_notification</string>
    <string name="pref_offline_notification_summary">Show notification for download progress</string>
    <string name="pref_offline_notification_title">Display progress</string>
    <string name="pref_offline_readability">pref_offline_readability</string>
    <string name="pref_offline_readability_title">Download readability</string>
    <string name="pref_readability_font">pref_readability_font</string>
    <string name="pref_readability_line_height">pref_readability_line_height</string>
    <string name="pref_readability_text_size">pref_readability_text_size</string>
    <string name="pref_saved_item_sync">pref_saved_item_sync</string>
    <string name="pref_saved_item_sync_summary">Download content when you save story</string>
    <string name="pref_saved_item_sync_title">Enable offline access</string>
    <string name="pref_smooth_scroll">pref_smooth_scroll</string>
    <string name="pref_smooth_scroll_summary">Disable to improve scroll accuracy</string>
    <string name="pref_smooth_scroll_title">Animate navigation</string>
    <string name="pref_story_display">pref_story_display</string>
    <string name="pref_story_display_title">Default open</string>
    <string name="pref_story_display_value_article">article</string>
    <string name="pref_text_size">pref_text_size</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_thread_indicator">pref_thread_indicator</string>
    <string name="pref_thread_indicator_title">Thread indicator</string>
    <string name="pref_volume">pref_volume</string>
    <string name="pref_volume_help">pref_volume_help</string>
    <string name="pref_volume_summary">Scroll up/down with volume keys</string>
    <string name="pref_volume_title">Use volume navigation</string>
    <string name="pref_widget_frequency">pref_widget_frequency</string>
    <string name="pref_widget_frequency_title">Update frequency</string>
    <string name="pref_widget_query">pref_widget_query</string>
    <string name="pref_widget_query_title">Filter by query (optional)</string>
    <string name="pref_widget_section">pref_widget_section</string>
    <string name="pref_widget_section_title">Section</string>
    <string name="pref_widget_section_value_top">top</string>
    <string name="pref_widget_theme">pref_widget_theme</string>
    <string name="pref_widget_theme_value_transparent">transparent</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="swipe_save">Save</string>
    <string name="swipe_vote">Vote</string>
    <string name="third_party_licenses_title">3rd Party Licenses</string>
    <string name="title_activity_ask">Ask HN</string>
    <string name="title_activity_best">Best Stories</string>
    <string name="title_activity_favorite">Saved Stories</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_activity_list">Top Stories</string>
    <string name="title_activity_new">New Stories</string>
    <string name="title_activity_popular">Catch Up</string>
    <string name="title_activity_show">Show HN</string>
    <string name="title_activity_submit">Submit to HN</string>
    <string name="title_activity_user">My Profile</string>
    <string name="whats_this">"What's this?"</string>
    <string name="widget_options">Widget options</string>
</resources>