<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_story_display_title" android:key="@string/pref_story_display" android:defaultValue="@string/pref_story_display_value_article" app:entries="@array/pref_story_display_options" app:entryValues="@array/pref_story_display_values" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_multi_window_title" android:key="@string/pref_multi_window" android:summary="@string/pref_multi_window_summary" android:defaultValue="@string/pref_multi_window_value_none" app:entries="@array/pref_multi_window_options" app:entryValues="@array/pref_multi_window_values" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_list_item_view_title" android:key="@string/pref_list_item_view" android:defaultValue="false" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_highlight_updated_title" android:key="@string/pref_highlight_updated" android:summary="@string/pref_highlight_updated_summary" android:defaultValue="true" />
    <io.github.hidroh.materialistic.preference.PreferenceHelp android:title="@string/whats_this" android:key="@string/pref_highlight_updated_help" app:dialogLayout="@layout/help_list_view" app:dialogTitle="@string/pref_highlight_updated_title" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_auto_viewed_title" android:key="@string/pref_auto_viewed" android:summary="@string/pref_auto_viewed_summary" android:defaultValue="false" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_list_swipe_left_title" android:key="@string/pref_list_swipe_left" android:defaultValue="@string/swipe_save" app:entries="@array/pref_list_swipe_options" app:entryValues="@array/pref_list_swipe_values" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_list_swipe_right_title" android:key="@string/pref_list_swipe_right" android:defaultValue="@string/swipe_vote" app:entries="@array/pref_list_swipe_options" app:entryValues="@array/pref_list_swipe_values" />
</android.support.v7.preference.PreferenceScreen>