<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_line_height_title" android:key="@string/pref_line_height" android:defaultValue="1.0" app:entries="@array/pref_line_height_options" app:entryValues="@array/pref_line_height_values" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_comment_display_title" android:key="@string/pref_comment_display" android:defaultValue="@string/pref_comment_display_value_single" app:entries="@array/pref_comment_display_options" app:entryValues="@array/pref_comment_display_values" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_max_lines_title" android:key="@string/pref_max_lines" android:defaultValue="-1" app:entries="@array/comment_max_lines_options" app:entryValues="@array/comment_max_lines_values" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_color_code_title" android:key="@string/pref_color_code" android:defaultValue="true" />
    <android.support.v7.preference.SeekBarPreference android:max="100" android:title="@string/pref_color_code_opacity_title" android:key="@string/pref_color_code_opacity" android:dependency="@string/pref_color_code" android:defaultValue="100" app:showSeekBarValue="false" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_thread_indicator_title" android:key="@string/pref_thread_indicator" android:defaultValue="true" />
    <android.support.v7.preference.PreferenceCategory android:summary="@string/pref_navigation_title" style="@style/Preference.Category.Hint">
        <io.github.hidroh.materialistic.preference.PreferenceHelp android:title="@string/whats_this" android:key="@string/pref_navigation_help" app:dialogLayout="@layout/help_navigation" app:dialogTitle="@string/pref_navigation_title" />
        <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_navigation_title" android:key="@string/pref_navigation" android:defaultValue="false" />
        <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_navigation_vibrate_title" android:key="@string/pref_navigation_vibrate" android:dependency="@string/pref_navigation" android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/pref_smooth_scroll_title" android:key="@string/pref_smooth_scroll" android:summary="@string/pref_smooth_scroll_summary" android:dependency="@string/pref_navigation" android:defaultValue="true" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>