<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.github.hidroh.materialistic.preference.FontSizePreference android:title="@string/pref_text_size_title" android:key="@string/pref_readability_text_size" android:defaultValue="0" app:entries="@array/text_size_options" app:entryValues="@array/pref_text_size_values" />
    <io.github.hidroh.materialistic.preference.FontPreference android:title="@string/pref_font_title" android:key="@string/pref_readability_font" android:defaultValue="" app:entries="@array/font_options" app:entryValues="@array/font_values" />
    <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_line_height_title" android:key="@string/pref_readability_line_height" android:defaultValue="1.2" app:entries="@array/pref_line_height_options" app:entryValues="@array/pref_line_height_readability_values" />
</android.support.v7.preference.PreferenceScreen>