<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/drawer_header_height">
        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="?backgroundDrawerHeader" android:scaleType="centerCrop" android:contentDescription="@string/login" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:textColor="?android:textColorPrimary" android:layout_gravity="bottom" android:id="@id/drawer_account" android:paddingRight="88.0dip" android:text="@string/login" app:iconStart="@drawable/ic_lock_white_24dp" style="@style/DrawerTextStyle" />
        <ImageButton android:layout_gravity="end|bottom|center" android:id="@id/drawer_logout" android:layout_width="wrap_content" android:layout_height="?android:listPreferredItemHeight" android:src="@drawable/ic_power_settings_new_white_24dp" android:tint="?android:textColorPrimary" android:contentDescription="@string/logout" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </FrameLayout>
    <View android:background="@color/blackT12" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_list" android:text="@string/title_activity_list" app:iconStart="@drawable/ic_trending_up_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_popular" android:text="@string/title_activity_popular" app:iconStart="@drawable/ic_history_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_new" android:text="@string/title_activity_new" app:iconStart="@drawable/ic_new_releases_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_more" android:text="@string/more_sections" app:iconEnd="@drawable/ic_expand_more_white_24dp" app:iconStart="@drawable/ic_dummy_transparent_24dp" style="@style/DrawerTextStyle" />
    <LinearLayout android:orientation="vertical" android:id="@id/drawer_more_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_best" android:text="@string/title_activity_best" app:iconStart="@drawable/ic_thumb_up_white_24dp" style="@style/DrawerTextStyle" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_show" android:text="@string/title_activity_show" app:iconStart="@drawable/ic_done_white_24dp" style="@style/DrawerTextStyle" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_ask" android:text="@string/title_activity_ask" app:iconStart="@drawable/ic_live_help_white_24dp" style="@style/DrawerTextStyle" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_job" android:text="@string/title_activity_jobs" app:iconStart="@drawable/ic_work_white_24dp" style="@style/DrawerTextStyle" />
    </LinearLayout>
    <View android:background="@color/blackT12" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_favorite" android:text="@string/title_activity_favorite" app:iconStart="@drawable/ic_bookmark_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_user" android:text="@string/title_activity_user" app:iconStart="@drawable/ic_person_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_submit" android:text="@string/title_activity_submit" app:iconStart="@drawable/ic_add_white_24dp" style="@style/DrawerTextStyle" />
    <View android:background="@color/blackT12" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_feedback" android:text="@string/feedback" app:iconStart="@drawable/ic_feedback_white_24dp" style="@style/DrawerTextStyle" />
    <io.github.hidroh.materialistic.widget.TintableTextView android:id="@id/drawer_settings" android:text="@string/action_settings" app:iconStart="@drawable/ic_settings_white_24dp" style="@style/DrawerTextStyle" />
</LinearLayout>