<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate" />
        <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" layout="@layout/button_navigation" />
        </FrameLayout>
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate_up" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate_down" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate_right" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate_left" />
        <io.github.hidroh.materialistic.widget.TintableTextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="?listPreferredItemHeightSmall" android:text="@string/help_navigate_move" />
    </LinearLayout>
</ScrollView>