<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/content_frame" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/toolbar" />
    <ScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:scrollbars="none" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/application_info_title" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_application_info" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
            <TextView android:text="@string/developer_info_title" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_developer_info" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
            <TextView android:text="@string/libraries_title" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_libraries" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
            <TextView android:text="@string/license_title" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_license" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
            <TextView android:text="@string/third_party_licenses_title" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_3rd_party_licenses" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
            <TextView android:text="@string/privacy_policy" style="@style/HeadlineTextStyle" />
            <TextView android:id="@id/text_privacy_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/textContentStyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>